--- a/inner-page.html
+++ b/inner-page.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Nikhil Gupta</title>
+  <title>Tejas Sawant</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -49,10 +49,10 @@
         <h1 class="text-light"><a href="index.html">Nikhil Gupta</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="https://www.facebook.com/coolnicks.nikhil" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.bfacebook.com/coolnicks.nikhil" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="https://www.linkedin.com/in/nikhil-vinod-gupta/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkbedin.com/in/nikhil-vinod-gupta/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -75,7 +75,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Nikhil Gupta</h1>
+      <h1>Tejas Sawant</h1>
       <p>I'm <span class="typed" data-typed-items="DevOps Architect, SRE Architect, Freelancer"></span></p>
     </div>
   </section><!-- End Hero -->
@@ -88,7 +88,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am a DevOps/SRE engineering with 11 plus years of experience and currently working as Staff DevOps/SRE Engineer with Walmart Labs, India. (Ranked #1 in Fortune 500 since many years)</p>
+          <p>I am a DevOps/SRE engineering with 7 plus years of experience and currently working as Staff DevOps/SRE Engineer with Walmart Labs, India. (Ranked #1 in Fortune 500 since many years)</p>
         </div>
 
         <div class="row">
@@ -103,9 +103,9 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 27 Jun 1986</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 11 Oct 1991</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> https://nikhil-vinod-gupta.github.io/</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 782 945 3768</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 8880503543</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Bengaluru(Bangalore), India</li>
                 </ul>
               </div>
