--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Nikhil Gupta</title>
+  <title>Tejas Sawant</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -49,10 +49,10 @@
         <h1 class="text-light"><a href="index.html">Tejas Sawant</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="https://www.facebook.com/coolnicks.nikhil" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.facebook.com/tejas.sawant.58323" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="https://www.linkedin.com/in/nikhil-vinod-gupta/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/tejas-sawant-90991974/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
