--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Nikhil Gupta</h1>
+      <h1>Tejas Sawant</h1>
       <p>I'm <span class="typed" data-typed-items="DevOps Engineer, DevOps Architect, Freelancer"></span></p>
     </div>
   </section><!-- End Hero -->
@@ -88,7 +88,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I am a DevOps/SRE engineering with 7 plus years of experience and currently working as Staff DevOps/SRE Engineer with McAfee, India.</p>
+          <p>I am a DevOps/SRE engineering with 7 plus years of experience and currently working as DevOps Tools Engineer/DevOps Platform Architect with McAfee, India.</p>
         </div>
 
         <div class="row">
@@ -98,22 +98,22 @@
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>DevOps & SRE Architect/Consultant.</h3>
             <p class="font-italic">
-              A passionate DevOps & SRE, who had implemented DevOps & SRE practices (which includes CI/CD architecture, Monitoring/Alerting, Infra & Cost Management, Code Quality, SLA/SLO etc) in different kind of organizations (Consulting companies, R&D Labs, Product based organisations and small/medium size startups). Before joining Walmart, I have worked with Intuit(Ranked #1 in best places to work for in India), DataTorrent, Amadeus, Altisource & Accenture. I have also worked as a part time Freelancer.
+              A passionate DevOps Tools Engineer & Architect, who had implemented DevOps Tools practices (which includes JIRA & Confluence, GitHub Enterprise, TeamCity, Artifactory) in McAfee. Before joining McAfee, I have worked with Sociate Generale & Infosys. I have also worked as a part time Freelancer.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 27 Jun 1986</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> https://nikhil-vinod-gupta.github.io/</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 782 945 3768</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 11 Oct 1991</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> https://tej1599.github.io/tejas-sawant.github.io/</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 888050543</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Bengaluru(Bangalore), India</li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Full Time:</strong> Not Available</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> B.E. (SGSITS)</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> nikhil.vinod.gupta@gmail.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> B.E. (VTU Belgaum)</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> tejas987581@gmail.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available(Part Time)</li>
                 </ul>
               </div>
@@ -189,7 +189,7 @@
 
         <div class="section-title">
           <h2>Certifications</h2>
-          <p>Below is the list of the certifications which I have passed. You can check my <a href="https://www.linkedin.com/in/nikhil-vinod-gupta/" target="_blank">LinkedIn Profile </a> for more details</p>
+          <p>Below is the list of the certifications which I have passed. You can check my <a href="https://www.linkedin.com/in/tejas-sawant-90991974/" target="_blank">LinkedIn Profile </a> for more details</p>
         </div>
 
         <div class="row skills-content">
