--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>I am a Senior DevOps with 10+ years of experience and currently working with Walmart Labs. I have created CI/CD architecture and implemented DevOps practices in different kind of organizations (Consulting companies, R&D Labs, Product based organisations and small/medium size startups).</p>
+          <p>I am a Senior DevOps Tools Engineer with 7+ years of experience and currently working with McAfee. I have created CI/CD Tools architecture and implemented DevOps practices in McAfee also I am currently working as lead Sys admin for the DevOps Applications.</p>
         </div>
 
         <div class="row">
